# elrond-storage-contract

./: Cargo.toml  README.md  erdpy.json
docs/: introduce.md
interaction/ts/: package.json  tsconfig.json
interaction/ts/src/: index.ts
mandos/: storage-order-call-node-add.scen.json  storage-order-call-node-duplicated.scen.json  storage-order-call-set-price.scen.json  storage-order-call-token-add.scen.json  storage-order-call-token-duplicated.scen.json  storage-order-call-token-remove.scen.json  storage-order-init.scen.json
src/: storage_order.rs
wasm/src/: lib.rs
